--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "editor.rulers": [127]
+    "editor.rulers": [
+        127
+    ],
+    "python.pythonPath": "/usr/bin/python3.6",
+    "python.linting.pycodestyleEnabled": false,
+    "python.linting.flake8Enabled": true,
+    "python.linting.enabled": true,
+    "python.linting.lintOnSave": true
 }
