--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
-    "editor.rulers": [
-        127
-    ],
+    "editor.rulers": [ 79, 99, 119],
     "python.pythonPath": "/usr/bin/python3.6",
     "python.linting.pycodestyleEnabled": false,
     "python.linting.flake8Enabled": true,
